<resources>
    <string name="app_name">Parking App</string>
    <string name="title_home">Home</string>
    <string name="title_park_selection">Parking</string>
    <string name="title_notifications">Notifications</string>
    <string name="select_park_title">Select Parking Location</string>
    <string name="city">City</string>
    <string name="park">Park</string>
    <string name="continue_string">Continue</string>
    <string name="parking_simulator">Parking Simulator</string>
    <string name="place_holder">n/a</string>
    <string name="taken_slots">Taken Slots</string>
    <string name="available_slots">Available Slots</string>
    <string name="park_entry">Park Entry</string>
</resources>