<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/layoutTitle"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="10dp"
        android:text="@string/parking_simulator"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridSlots"
        android:layout_width="369dp"
        android:layout_height="512dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTitle"
        app:layout_constraintVertical_bias="0.187">

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_holder"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/gridSlots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTitle"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/parkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/place_holder"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/gridSlots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toEndOf="@+id/cityText"
        app:layout_constraintTop_toBottomOf="@+id/layoutTitle"
        app:layout_constraintVertical_bias="0.509" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_slots"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridSlots"
        app:layout_constraintVertical_bias="0.228" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taken_slots"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/avbl_slots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_holder"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/gridSlots"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/taken_slots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_holder"
        android:textColor="#EF0E0E"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/avbl_slots"
        app:layout_constraintVertical_bias="0.092" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="29dp"
        android:layout_height="30dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="7dp"
        android:contentDescription="@string/park_entry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gridSlots"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityText"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/arrow_forward" />
</androidx.constraintlayout.widget.ConstraintLayout>